--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-haku",
-  "version": "1.0.1",
+  "version": "1.0.2-beta",
   "description": "",
   "main": "index.js",
   "type": "commonjs",
