--- a/package.json
+++ b/package.json
@@ -15,34 +15,16 @@
   "author": "Haku",
   "license": "ISC",
   "devDependencies": {
-    "@types/eslint": "^8.44.3",
-    "@types/node": "^20.8.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.51.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "prettier": "^3.0.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-eslint-plugin": "^5.1.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3"
-  },
-  "peerDependencies": {
-    "@types/eslint": "^8.44.3",
-    "@types/node": "^20.8.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.51.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-eslint-plugin": "^5.1.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3"
-  }
+    "eslint-config-airbnb-typescript": "^17.1.0"
+  },
+  "peerDependencies": {}
 }
