--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-config-haku",
   "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "config",
   "type": "commonjs",
   "scripts": {},
   "keywords": [
@@ -26,5 +26,16 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0"
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "eslint": ">=0.8.0",
+    "prettier": "^3.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
+    "@typescript-eslint/parser": "^6.7.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0"
+  }
 }
