--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-haku",
-  "version": "1.0.10",
-  "description": "",
+  "version": "1.0.11",
+  "description": "Custom Eslint config with airbnb",
   "main": "index.js",
   "type": "commonjs",
   "repository": {
