--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-config-haku",
   "version": "1.0.11",
   "description": "Custom Eslint config with airbnb",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "commonjs",
   "repository": {
     "type": "git",
