--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-haku",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Custom Eslint config with airbnb",
   "main": "src/index.js",
   "type": "commonjs",
@@ -32,15 +32,10 @@
     "eslint-config-airbnb-typescript": "^17.1.0"
   },
   "peerDependencies": {
-    "eslint": ">=0.8.0",
-    "prettier": "^3.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0"
+    "eslint": ">=8.0.0",
+    "prettier": ">=3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0 || ^6.0.0",
+    "@typescript-eslint/parser": "^5.0.0 || ^6.0.0",
+    "eslint-plugin-import": "^2.28.0"
   }
 }
