--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-haku",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Custom Eslint config with airbnb",
   "main": "index.js",
   "type": "commonjs",
@@ -19,10 +19,6 @@
   "author": "Haku",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.51.0",
-    "prettier": "^3.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "@typescript-eslint/parser": "^6.7.4",
@@ -31,12 +27,10 @@
     "eslint-config-airbnb-typescript": "^17.1.0"
   },
   "peerDependencies": {
-    "eslint": ">=0.8.0",
-    "prettier": "^3.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": ">=7.0.0",
+    "prettier": ">=3.0.3",
+    "eslint-config-prettier": ">8.6.0",
+    "eslint-plugin-import": ">=2.27.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "eslint-config-airbnb": "^19.0.4",
