--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "eslint-config-haku",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Custom Eslint config with airbnb",
   "main": "index.js",
-  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hakudevtw/eslint-config-haku"
@@ -19,21 +18,19 @@
   "author": "Haku",
   "license": "ISC",
   "devDependencies": {
-    "eslint-plugin-import": "^2.28.1",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "peerDependencies": {
-    "eslint": ">=8.0.0",
-    "prettier": ">=3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0 || ^6.0.0",
     "@typescript-eslint/parser": "^5.0.0 || ^6.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0"
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0"
   }
 }
